# khustup

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt  conanfile1.txt  requirements.txt
.devcontainer/: Dockerfile  reinstall-cmake.sh  requirements.txt
include/Ui/: draw_main_window.h  draw_scene.h
include/models/: color.h  coordinate.h  draw_canvas.h  draw_point.h  draw_point_model.h  draw_update.h  draw_update_model.h
include/networking/: draw_client.h  draw_update_raw_data.h
include/services/: draw_network_observer.h  draw_network_subject.h  draw_update_observer.h  draw_update_subject.h  drawer.h  scale_decorator.h
include/services/rpi/: rpi_drawer.h
include/services/simulation/: simulation.h  webcam_reader.h
include/simulation/: simulation.h
include/utils/: measurer.h  type_aliases.h
src/: CMakeLists.txt  main.cpp
src/Ui/: CMakeLists.txt  draw_main_window.cpp  draw_scene.cpp
src/include/utils/: measurer.h
src/models/: CMakeLists.txt  coordinate.cpp  draw_cavas.cpp  draw_point.cpp  draw_point_model.cpp  draw_update.cpp  draw_update_model.cpp
src/networking/: CMakeLists.txt  draw_client.cpp  draw_update_raw_data.cpp
src/services/: CMakeLists.txt  draw_network_observer.cpp  draw_network_subject.cpp  draw_update_subject.cpp  drawer.cpp  scale_decorator.cpp
src/services/rpi/: rpi_drawer.cpp
src/services/simulation/: simulation.cpp  webcam_reader.cpp
src/utils/: CMakeLists.txt  measurer.cpp
tests/: CMakeLists.txt  main.cpp
tests/utils/: measurer_test.cpp
