cmake_minimum_required(VERSION 3.20)
enable_testing()

project(khustup)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
message(INFO " windows")
    list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/build/generators")
    list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/build/generators")
else()
    message(INFO " not windows")
    list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/build/Release/generators")
    list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/build/Debug/generators")
    list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/build/Releas/generators")
    list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/build/Debug/generators")
endif()

add_subdirectory(src)
add_subdirectory(tests)
